Modified style of tickets and its look like as Uzbekistan Airways