@@ -1,26 +1,37 @@
 package com.monolit.booking.booking.service.impl;
 
-import com.monolit.booking.booking.dto.request.*;
+import com.monolit.booking.booking.dto.request.CreateFlightRequest;
+import com.monolit.booking.booking.dto.request.FlightSearchRequest;
+import com.monolit.booking.booking.dto.request.UpdateFlightRequest;
 import com.monolit.booking.booking.dto.response.*;
-import com.monolit.booking.booking.entity.*;
-import com.monolit.booking.booking.enums.*;
-import com.monolit.booking.booking.exception.*;
+import com.monolit.booking.booking.entity.Airline;
+import com.monolit.booking.booking.entity.Airport;
+import com.monolit.booking.booking.entity.Flight;
+import com.monolit.booking.booking.enums.CabinClass;
+import com.monolit.booking.booking.enums.FlightSortBy;
+import com.monolit.booking.booking.enums.FlightStatus;
+import com.monolit.booking.booking.exception.AirlineNotFoundException;
+import com.monolit.booking.booking.exception.AirportNotFoundException;
+import com.monolit.booking.booking.exception.FlightNotFoundException;
 import com.monolit.booking.booking.mapper.FlightMapper;
-import com.monolit.booking.booking.repo.*;
+import com.monolit.booking.booking.repo.AirlineRepository;
+import com.monolit.booking.booking.repo.AirportRepository;
+import com.monolit.booking.booking.repo.FlightRepository;
 import com.monolit.booking.booking.service.interfaces.FlightService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.data.domain.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.Duration;
 import java.time.Instant;
 import java.time.ZoneOffset;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -32,21 +43,38 @@ public class FlightServiceImpl implements FlightService {
     private final AirlineRepository airlineRepository;
     private final FlightMapper flightMapper;
 
+    // ═══════════════════════════════════════
+    // ПОИСК РЕЙСОВ
+    // ═══════════════════════════════════════
+
     @Override
     @Transactional(readOnly = true)
-    public Page<FlightSearchResponse> searchFlights(FlightSearchRequest request, Pageable pageable) {
-        log.info("Searching flights from {} to {} on {}",
-                request.getDepartureAirport(), request.getArrivalAirport(), request.getDepartureDate());
+    public Page<FlightResponse> searchFlights(FlightSearchRequest request, Pageable pageable) {
+        log.info("Searching flights from {} to {} on {}, passengers: {}",
+                request.getOriginCode(), request.getDestinationCode(),
+                request.getDepartureDate(), request.getPassengers());
 
-        Instant startDate = request.getDepartureDate().atStartOfDay(ZoneOffset.UTC).toInstant();
-        Instant endDate = request.getDepartureDate().plusDays(1).atStartOfDay(ZoneOffset.UTC).toInstant();
+        // Конвертируем LocalDate в Instant (начало и конец дня в UTC)
+        Instant startDate = request.getDepartureDate()
+                .atStartOfDay(ZoneOffset.UTC)
+                .toInstant();
+        Instant endDate = request.getDepartureDate()
+                .plusDays(1)
+                .atStartOfDay(ZoneOffset.UTC)
+                .toInstant();
 
-        Sort sort = createSort(request.getSortBy(), request.getSeatClass());
-        Pageable sortedPageable = PageRequest.of(pageable.getPageNumber(), pageable.getPageSize(), sort);
+        // Создаём сортировку
+        Sort sort = createSort(request.getSortBy(), request.getCabinClass());
+        Pageable sortedPageable = PageRequest.of(
+                pageable.getPageNumber(),
+                pageable.getPageSize(),
+                sort
+        );
 
+        // Ищем рейсы
         Page<Flight> flights = flightRepository.searchFlights(
-                request.getDepartureAirport().toUpperCase(),
-                request.getArrivalAirport().toUpperCase(),
+                request.getOriginCode().toUpperCase(),
+                request.getDestinationCode().toUpperCase(),
                 startDate,
                 endDate,
                 request.getPassengers(),
@@ -54,12 +82,15 @@ public class FlightServiceImpl implements FlightService {
                 sortedPageable
         );
 
-        SeatClass seatClass = request.getSeatClass() != null ? request.getSeatClass() : SeatClass.ECONOMY;
+        log.info("Found {} flights", flights.getTotalElements());
 
-        return flights.map(flight -> flightMapper.toFlightSearchResponse(flight, seatClass));
+        return flights.map(flightMapper::toFlightResponse);
     }
 
-    private Sort createSort(FlightSortBy sortBy, SeatClass seatClass) {
+    /**
+     * Создать сортировку по критерию
+     */
+    private Sort createSort(FlightSortBy sortBy, CabinClass cabinClass) {
         if (sortBy == null) {
             sortBy = FlightSortBy.PRICE;
         }
@@ -68,11 +99,17 @@ public class FlightServiceImpl implements FlightService {
             case TIME -> Sort.by(Sort.Direction.ASC, "departureTime");
             case DURATION -> Sort.by(Sort.Direction.ASC, "durationMinutes");
             case PRICE -> {
-                String priceField = seatClass == SeatClass.BUSINESS ? "priceBusiness" : "priceEconomy";
+                String priceField = (cabinClass == CabinClass.BUSINESS || cabinClass == CabinClass.FIRST_CLASS)
+                        ? "businessPrice"
+                        : "basePrice";
                 yield Sort.by(Sort.Direction.ASC, priceField);
             }
         };
     }
+
+    // ═══════════════════════════════════════
+    // ПОЛУЧЕНИЕ РЕЙСА
+    // ═══════════════════════════════════════
 
     @Override
     @Transactional(readOnly = true)
@@ -88,41 +125,63 @@ public class FlightServiceImpl implements FlightService {
     @Transactional(readOnly = true)
     public FlightDetailResponse getFlightByNumber(String flightNumber) {
         log.info("Getting flight by number: {}", flightNumber);
-        Flight flight = flightRepository.findByFlightNumber(flightNumber)
-                .orElseThrow(() -> new FlightNotFoundException("Flight not found with number: " + flightNumber));
+        Flight flight = flightRepository.findByFlightNumber(flightNumber.toUpperCase())
+                .orElseThrow(() -> new FlightNotFoundException(
+                        "Flight not found with number: " + flightNumber
+                ));
         return flightMapper.toFlightDetailResponse(flight);
     }
+
+    // ═══════════════════════════════════════
+    // СОЗДАНИЕ РЕЙСА
+    // ═══════════════════════════════════════
 
     @Override
     @Transactional
     public FlightDetailResponse createFlight(CreateFlightRequest request) {
         log.info("Creating flight: {}", request.getFlightNumber());
 
-        if (request.getDepartureTime().isAfter(request.getArrivalTime())) throw new IllegalArgumentException("Departure time should be after arrival time");
+        // Валидация времени
+        if (request.getDepartureTime().isAfter(request.getArrivalTime())) {
+            throw new IllegalArgumentException("Arrival time must be after departure time");
+        }
 
+        // Проверка существования рейса с таким номером
+        if (flightRepository.existsByFlightNumber(request.getFlightNumber().toUpperCase())) {
+            throw new IllegalArgumentException(
+                    "Flight with number " + request.getFlightNumber() + " already exists"
+            );
+        }
+
+        // Получаем авиакомпанию
         Airline airline = airlineRepository.findByIataCode(request.getAirlineCode().toUpperCase())
-                .orElseThrow(() -> new AirlineNotFoundException(request.getAirlineCode(), true));
+                .orElseThrow(() -> new AirlineNotFoundException(request.getAirlineCode()));
 
-        Airport departureAirport = airportRepository.findByIataCode(request.getDepartureAirportCode().toUpperCase())
-                .orElseThrow(() -> new AirportNotFoundException(request.getDepartureAirportCode(), true));
+        // Получаем аэропорты
+        Airport origin = airportRepository.findByIataCode(request.getOriginCode().toUpperCase())
+                .orElseThrow(() -> new AirportNotFoundException(request.getOriginCode()));
 
-        Airport arrivalAirport = airportRepository.findByIataCode(request.getArrivalAirportCode().toUpperCase())
-                .orElseThrow(() -> new AirportNotFoundException(request.getArrivalAirportCode(), true));
+        Airport destination = airportRepository.findByIataCode(request.getDestinationCode().toUpperCase())
+                .orElseThrow(() -> new AirportNotFoundException(request.getDestinationCode()));
 
-        int durationMinutes = (int) Duration.between(request.getDepartureTime(), request.getArrivalTime()).toMinutes();
-
+        // Создаём рейс
         Flight flight = Flight.builder()
-                .flightNumber(request.getFlightNumber())
+                .flightNumber(request.getFlightNumber().toUpperCase())
                 .airline(airline)
-                .departureAirport(departureAirport)
-                .arrivalAirport(arrivalAirport)
+                .origin(origin)
+                .destination(destination)
                 .departureTime(request.getDepartureTime())
                 .arrivalTime(request.getArrivalTime())
-                .durationMinutes(durationMinutes)
                 .totalSeats(request.getTotalSeats())
                 .availableSeats(request.getTotalSeats())
-                .priceEconomy(request.getPriceEconomy())
-                .priceBusiness(request.getPriceBusiness())
+                .economySeats(request.getEconomySeats())
+                .businessSeats(request.getBusinessSeats())
+                .firstClassSeats(request.getFirstClassSeats())
+                .basePrice(request.getBasePrice())
+                .businessPrice(request.getBusinessPrice())
+                .firstClassPrice(request.getFirstClassPrice())
+                .aircraftType(request.getAircraftType())
+                .stops(0) // прямой рейс по умолчанию
                 .status(FlightStatus.SCHEDULED)
                 .build();
 
@@ -131,6 +190,10 @@ public class FlightServiceImpl implements FlightService {
 
         return flightMapper.toFlightDetailResponse(flight);
     }
+
+    // ═══════════════════════════════════════
+    // ОБНОВЛЕНИЕ РЕЙСА
+    // ═══════════════════════════════════════
 
     @Override
     @Transactional
@@ -141,27 +204,33 @@ public class FlightServiceImpl implements FlightService {
         Flight flight = flightRepository.findById(id)
                 .orElseThrow(() -> new FlightNotFoundException(id));
 
+        // Обновляем время
         if (request.getDepartureTime() != null) {
             flight.setDepartureTime(request.getDepartureTime());
         }
         if (request.getArrivalTime() != null) {
             flight.setArrivalTime(request.getArrivalTime());
         }
-        if (request.getDepartureTime() != null || request.getArrivalTime() != null) {
-            int durationMinutes = (int) Duration.between(flight.getDepartureTime(), flight.getArrivalTime()).toMinutes();
-            flight.setDurationMinutes(durationMinutes);
-        }
+
+        // Обновляем места
         if (request.getTotalSeats() != null) {
             int seatDifference = request.getTotalSeats() - flight.getTotalSeats();
             flight.setTotalSeats(request.getTotalSeats());
             flight.setAvailableSeats(Math.max(0, flight.getAvailableSeats() + seatDifference));
         }
-        if (request.getPriceEconomy() != null) {
-            flight.setPriceEconomy(request.getPriceEconomy());
+
+        // Обновляем цены
+        if (request.getBasePrice() != null) {
+            flight.setBasePrice(request.getBasePrice());
         }
-        if (request.getPriceBusiness() != null) {
-            flight.setPriceBusiness(request.getPriceBusiness());
+        if (request.getBusinessPrice() != null) {
+            flight.setBusinessPrice(request.getBusinessPrice());
         }
+        if (request.getFirstClassPrice() != null) {
+            flight.setFirstClassPrice(request.getFirstClassPrice());
+        }
+
+        // Обновляем статус
         if (request.getStatus() != null) {
             flight.setStatus(request.getStatus());
         }
@@ -169,20 +238,30 @@ public class FlightServiceImpl implements FlightService {
         flight = flightRepository.save(flight);
         log.info("Flight updated: {}", id);
 
-        return flightMapper.toFlightDetailResponse(flight);
+        return flightMapper.toFlightDetailResponse(flight);  // ✅ добавил return
     }
+
+    // ═══════════════════════════════════════
+    // УДАЛЕНИЕ РЕЙСА
+    // ═══════════════════════════════════════
 
     @Override
     @Transactional
     @CacheEvict(value = "flights", key = "#id")
     public void deleteFlight(Long id) {
         log.info("Deleting flight: {}", id);
+
         if (!flightRepository.existsById(id)) {
             throw new FlightNotFoundException(id);
         }
+
         flightRepository.deleteById(id);
         log.info("Flight deleted: {}", id);
     }
+
+    // ═══════════════════════════════════════
+    // АЭРОПОРТЫ
+    // ═══════════════════════════════════════
 
     @Override
     @Transactional(readOnly = true)
@@ -192,7 +271,7 @@ public class FlightServiceImpl implements FlightService {
         return airportRepository.findByIsActiveTrue()
                 .stream()
                 .map(flightMapper::toAirportResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -202,7 +281,7 @@ public class FlightServiceImpl implements FlightService {
         return airportRepository.searchAirports(query)
                 .stream()
                 .map(flightMapper::toAirportResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -211,9 +290,13 @@ public class FlightServiceImpl implements FlightService {
     public AirportResponse getAirportByCode(String iataCode) {
         log.info("Getting airport by code: {}", iataCode);
         Airport airport = airportRepository.findByIataCode(iataCode.toUpperCase())
-                .orElseThrow(() -> new AirportNotFoundException(iataCode, true));
+                .orElseThrow(() -> new AirportNotFoundException(iataCode));
         return flightMapper.toAirportResponse(airport);
     }
+
+    // ═══════════════════════════════════════
+    // АВИАКОМПАНИИ
+    // ═══════════════════════════════════════
 
     @Override
     @Transactional(readOnly = true)
@@ -223,7 +306,7 @@ public class FlightServiceImpl implements FlightService {
         return airlineRepository.findByIsActiveTrue()
                 .stream()
                 .map(flightMapper::toAirlineResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -232,14 +315,19 @@ public class FlightServiceImpl implements FlightService {
     public AirlineResponse getAirlineByCode(String iataCode) {
         log.info("Getting airline by code: {}", iataCode);
         Airline airline = airlineRepository.findByIataCode(iataCode.toUpperCase())
-                .orElseThrow(() -> new AirlineNotFoundException(iataCode, true));
+                .orElseThrow(() -> new AirlineNotFoundException(iataCode));
         return flightMapper.toAirlineResponse(airline);
     }
+
+    // ═══════════════════════════════════════
+    // ПОПУЛЯРНЫЕ НАПРАВЛЕНИЯ
+    // ═══════════════════════════════════════
 
     @Override
     @Transactional(readOnly = true)
     public List<PopularDestinationResponse> getPopularDestinations(int limit) {
         log.info("Getting top {} popular destinations", limit);
+
         Pageable pageable = PageRequest.of(0, limit);
         List<Object[]> results = flightRepository.findPopularDestinations(pageable);
 
@@ -247,8 +335,14 @@ public class FlightServiceImpl implements FlightService {
                 .map(row -> {
                     Airport airport = (Airport) row[0];
                     Long count = (Long) row[1];
-                    return flightMapper.toPopularDestinationResponse(airport, count);
+
+                    return PopularDestinationResponse.builder()
+                            .city(airport.getCity())
+                            .country(airport.getCountry())
+                            .iataCode(airport.getIataCode())
+                            .flightCount(count.intValue())
+                            .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
